# stython

./: README.md  pyproject.toml  test.py
src/: decorators.py
src/stython/: __init__.py  checker.py  decorators.py  typed.py
tests/: test_decorator.py  test_typed.py
